# numerical_mathematics_methods

./: .gitignore  CMakeLists.txt  README.md
.travis/: os_setup.sh
Example/: plot.py  rkm_2_auto.txt  rkm_2_auto_h.txt  rkm_2_auto_plot.txt  rkm_2_auto_quality.txt  rkm_4_auto.txt  rkm_4_auto_h.txt  rkm_4_auto_plot.txt  rkm_4_auto_quality.txt  rkm_auto_addressing.txt  rkm_h.txt
Source/: CMakeLists.txt
Source/cx_matrix/: cx_matrix.hpp
Source/matrix/: matrix.hpp
Source/numerical_mathematics_methods/: CMakeLists.txt  constants.hpp  control_unit.hpp  cx_functions.hpp  gauss_integral.hpp  general_tests.hpp  iterations_methods.hpp  lu_decomposition.hpp  lup_decomposition.hpp  lupq_decomposition.hpp  main.cpp  newton_cotes.hpp  newton_method.hpp  qr_decomposition.hpp  runge_kutta_methods.hpp  transmitter.hpp
Source/poly34/: poly34.h
Source/utils/: utils.hpp
